Small fix for jumping

--- a/css/index.css
+++ b/css/index.css
@@ -235,6 +235,14 @@ body {
     padding-top:75px;
 }
 
+.textSection::before { 
+    display: block; 
+    content: " "; 
+    height: 150px;      /* Give height of your fixed element */
+    margin-top: -150px; /* Give negative margin of your fixed element */   
+    visibility: hidden; 
+}
+
 .textSection::after {
     content: "";
     clear: both;
